add cmd interface, navi-example component, navi module; change app module, readme, gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,14 @@ chrome-profiler-events*.json
 *.sublime-workspace
 
 # IDE - VSCode
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+team-extension.log
 
 # misc
 /.sass-cache
